some erroneous file extensions fixed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
   <meta name="description" content="{{ page.subtitle }}">
   {% endif %}
 
+  <meta name="keywords" content="jonathon bohr, jonathan bohr, ThePacketBender, Pentester, Security, infosec, appsec">
+
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} {{ site.title-separator }} {{ site.description }}" href="{{ '/feed.xml' | absolute_url }}" />
 
   {% include gtag.html %}
